Updated error text using text supplied by the client. Only updated for 500 errors, though.

--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Something has gone wrong with this survey.</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -19,8 +19,8 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+    <p>Something has gone wrong with this survey.  We will be automatically notified that a problem has occurred, and we will fix it as soon as possible.</p>
+    <p>We're sorry about this. Your feedback and time are both very important to us. Please close this window and return to what you were doing.</p>
   </div>
 </body>
 </html>
