Add namespeacing to the test css and update the test page to point to localhost:3000

--- a/test/invitation-test.html
+++ b/test/invitation-test.html
@@ -1,13 +1,15 @@
 <html>
   <head>
     <title>Invitation Test</title>
-    <link rel="stylesheet" type="text/css" href="voc-test.css" />
   </head>
   <body>
     <div id="voc-target"></div>
     <!-- change the survey_id to show a different survey -->
+    <!-- <script type="application/javascript"
+      src="http://stage-voc.cloud.hhs.gov/widget/invitation.js?survey_id=11&target_id=voc-target&test_invitation=true&modal=true">
+    </script> -->
     <script type="application/javascript"
-      src="http://localhost:3000/widget/invitation.js?survey_id=11&target_id=voc-target&test_invitation=true&modal=true">
+      src="http://localhost:3000/widget/invitation.js?survey_id=11&target_id=voc-target&test_invitation=true&modal=true&stylesheet=http://localhost:8000/voc-test.css">
     </script>
   </body>
 </html>
