--- a/test/widget-test.html
+++ b/test/widget-test.html
@@ -4,8 +4,9 @@
     <link rel="stylesheet" type="text/css" href="voc-test.css" />
   </head>
   <body>
-    <div id="voc-target"></div>
+    <div id="survey_target"></div>
     <!-- change the survey_id to use a different survey -->
-    <script type="application/javascript" src="http://localhost:3000/widget/widget.js?survey_id=1&target_id=voc-target"></script>
+    <!-- <script type="application/javascript" src="https://localhost:3000/widget/widget.js?survey_id=1&target_id=voc-target"></script> -->
+    <script type="application/javascript" src="https://comment-app.hhs.gov/widget/widget.js?survey_id=244&target_id=survey_target&test_invitation=true"></script>
   </body>
 </html>
