--- a/public/test.html
+++ b/public/test.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/assets/application.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/application.css"/>
   </head>
   <body>
     <div id="voc"></div>
-    <script type="text/javascript" src="/widget/widget.js?survey_id=1&target_id=voc"></script>
+    <script type="text/javascript" src="http://localhost:3000/widget/widget.js?survey_id=1&target_id=voc"></script>
   </body>
 </html>
 
