Add an invitation survey to the test page.

--- a/public/test.html
+++ b/public/test.html
@@ -4,7 +4,10 @@
   </head>
   <body>
     <div id="voc"></div>
+    <div id="invitationTarget"></div>
     <script type="text/javascript" src="http://localhost:3000/widget/widget.js?survey_id=1&target_id=voc"></script>
+    <script type="text/javascript"
+            src="/widget/invitation.js?survey_id=1&target_id=invitationTarget&modal=true"></script>
   </body>
 </html>
 
