--- a/public/test.html
+++ b/public/test.html
@@ -7,7 +7,7 @@
     <div id="invitationTarget"></div>
     <script type="text/javascript" src="http://localhost:3000/widget/widget.js?survey_id=1&target_id=voc"></script>
     <script type="text/javascript"
-            src="/widget/invitation.js?survey_id=1&target_id=invitationTarget&modal=true"></script>
+            src="/widget/invitation.js?survey_id=1&target_id=invitationTarget&modal=true&test_invitation=true"></script>
   </body>
 </html>
 
