Add an iframe survey for testing

--- a/public/test.html
+++ b/public/test.html
@@ -5,6 +5,8 @@
   <body>
     <div id="voc"></div>
     <div id="invitationTarget"></div>
+    <iframe src="http://localhost:3000/surveys/1" width="100%" height="250px"
+      style="margin-top: 50px;"></iframe>
     <script type="text/javascript" src="http://localhost:3000/widget/widget.js?survey_id=1&target_id=voc"></script>
     <script type="text/javascript"
             src="/widget/invitation.js?survey_id=1&target_id=invitationTarget&modal=true&test_invitation=true"></script>
