--- a/public/test.html
+++ b/public/test.html
@@ -5,11 +5,19 @@
   <body>
     <div id="voc"></div>
     <div id="invitationTarget"></div>
+    <!--
     <iframe src="http://localhost:3000/surveys/1" width="100%" height="250px"
       style="margin-top: 50px;"></iframe>
     <script type="text/javascript" src="http://localhost:3000/widget/widget.js?survey_id=1&target_id=voc"></script>
     <script type="text/javascript"
             src="/widget/invitation.js?survey_id=1&target_id=invitationTarget&modal=true&test_invitation=true"></script>
+    -->
+    <iframe src="https://stage-voc.cloud.hhs.gov/surveys/475" width="100%"
+            height="250px" style="margin-top: 50px;"></iframe>
+    <script type="text/javascript"
+            src="https://stage-voc.cloud.hhs.gov/widget/widget.js?survey_id=475&target_id=voc"></script>
+    <script type="text/javascript"
+            src="https://stage-voc.cloud.hhs.gov/widget/invitation.js?survey_id=475&target_id=invitationTarget&modal=true&test_invitation=true"></script>
   </body>
 </html>
 
